--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eaip = { path = "../eaip" }
+eaip = "0.1.0"
 tokio = { version = "1.18", features = ["rt", "rt-multi-thread", "macros"] }
