--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
 name = "eaip2sql"
-version = "0.1.0"
+description = "Pull eAIP data into an SQL database."
+authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eaip = "0.1.0"
-tokio = { version = "1.18", features = ["rt", "rt-multi-thread", "macros"] }
+airac = "0.1.1"
+anyhow = "1.0"
+chrono = "0.4"
+clap = { version = "3", features = [ "derive" ] }
+eaip = "0.2.0"
+indicatif = "0.17.0-rc.11"
+sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "any", "mysql", "sqlite" ] }
+tokio = { version = "1.18", features = [ "rt", "rt-multi-thread", "macros" ] }
