--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ airac = "0.1.1"
 anyhow = "1.0"
 chrono = "0.4"
 clap = { version = "3", features = [ "derive" ] }
-eaip = "0.2.0"
+eaip = "0.4.0"
 indicatif = "0.17.0-rc.11"
-sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "any", "mysql", "sqlite" ] }
+sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "any", "sqlite" ] }
 tokio = { version = "1.18", features = [ "rt", "rt-multi-thread", "macros" ] }
